--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <p> Et voilà le texte de la page</p>
 <h2> On peut créer jusqu'à six niveaux de titres en HTML </h2>
 <p> Et voici un autre paragraphe </p> 
-</body> 
-</html>
 
-<a href= "http://www.wildcodeschool.com"> titre du lien </a>
 
-<img src= "image.png">
+
+<a href= "http://www.wildcodeschool.com"> wild code school </a>
+<br> <!-- Saut de ligne pour s'assurer que le lien est en dessous de l'image -->
+<br>
+<img src= "image.png" style = "width:200px; height: 200px;">
+</body>
